Opened 17 years ago
Closed 16 years ago
#2566 closed bug (fixed)
Workspaces replicant - active window lost focus
Reported by: | un_spacyar | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/alpha1 |
Component: | Applications/Workspaces | Version: | R1/pre-alpha1 |
Keywords: | Cc: | un_spacyar@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
When create a "Workspaces" replicant, the system lost the focus on active window. In the attached screenshot the active window still shows the grey color in the tab, and the close / resize buttons doesn't work. If I click on the diferent apps windows (Terminal, StyleEdit, Clock), the system not active the window.
If delete the replicant, the system works fine.
Attachments (1)
Change History (8)
by , 17 years ago
Attachment: | Workspace_Replicant.png added |
---|
comment:1 by , 17 years ago
Cc: | added |
---|
comment:2 by , 16 years ago
Component: | Applications/Workspaces → Servers/app_server |
---|
comment:3 by , 16 years ago
I retest with r.26829 and the problem appears to be solved.
Please, close this Ticket.
comment:5 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:6 by , 16 years ago
Component: | Servers/app_server → Applications/Workspaces |
---|---|
Milestone: | R1 → R1/alpha1 |
Resolution: | fixed |
Status: | closed → reopened |
The problem still persists; to reproduce, the Auto-Raise feature needs to be enabled for the replicant.
Note:
See TracTickets
for help on using tickets.
I can't reproduce this. Did you do anything special before, or can you reproduce this at will?