* The BView archived the view's event mask - if the auto-raise feature was   enabled when the view got archived, the replicant inherited the event mask   of the view. We now make sure the event mask is always set to 0. * This fixes bug #2566. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27940 a95241bf-73f2-0310-859d-f6bbb57e9c96